[gd_scene load_steps=3 format=3 uid="uid://daxbyfh4i85sk"]

[ext_resource type="Script" uid="uid://b8y3avcygd3g2" path="res://Menus/Main Menu/main_menu.gd" id="1_vw53x"]
[ext_resource type="Texture2D" uid="uid://bjxiy7pf5hxu" path="res://Assets/Menu/Controls.png" id="2_i30oo"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("controls_image")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vw53x")
controls_image = NodePath("ControlsGroup")

[node name="Image" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -117.5
offset_top = 100.0
offset_right = 117.5
offset_bottom = 123.00003
grow_horizontal = 2
text = "RESTORING COMMUNICATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "PLAY"

[node name="ControlsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "CONTROLS"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "QUIT"

[node name="ControlsGroup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Image" type="TextureRect" parent="ControlsGroup"]
layout_mode = 0
offset_left = 106.0
offset_top = 37.0
offset_right = 1035.0
offset_bottom = 598.0
texture = ExtResource("2_i30oo")
expand_mode = 1

[node name="BackButton" type="Button" parent="ControlsGroup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 286.0
offset_top = 214.0
offset_right = 436.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
